--- a/License-Service/pom.xml
+++ b/License-Service/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>License-Service</artifactId>
+	<artifactId>license-service</artifactId>  <!-- ИЗМЕНЕНО -->
 	<version>0.0.1-SNAPSHOT</version>
-	<name>License-Service</name>
+	<name>license-service</name>  <!-- ИЗМЕНЕНО -->
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -67,7 +67,7 @@
 				<artifactId>dockerfile-maven-plugin</artifactId>
 				<version>1.4.13</version>
 				<configuration>
-					<repository>${docker.image.prefix}/ ${project.artifactId}</repository>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<tag>${project.version}</tag>
 					<buildArgs>
 						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
@@ -86,5 +86,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
