--- a/License-Service/Dockerfile
+++ b/License-Service/Dockerfile
@@ -1,20 +1,9 @@
+
+
 FROM openjdk:17 as build
-
-LABEL maintainer="Illary Huaylupo <illaryhs@gmail.com>"
-
-ARG JAR_FILE
-
-COPY ${JAR_FILE} app.jar
-
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf /app.jar)
-
-FROM openjdk:17
-
-VOLUME /tmp
-
-ARG DEPENDENCY=/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-
-ENTRYPOINT ["java","-cp","app:app/lib/*","com.optimagrowth.license.LicenseServiceApplication"]
+WORKDIR application
+COPY --from=build application/depedencies/ ./
+COPY --from=build application/spring-boot-loader/ ./
+COPY --from=build application/snapshot-dependencies/ ./
+COPY --from=build application/application/ ./
+ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
