--- a/License-Service/Dockerfile
+++ b/License-Service/Dockerfile
@@ -1,6 +1,10 @@
-
-
 FROM openjdk:17 as build
+WORKDIR application
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
+
+FROM openjdk:17
 WORKDIR application
 COPY --from=build application/depedencies/ ./
 COPY --from=build application/spring-boot-loader/ ./
