--- a/License-Service/docker-compose.yml
+++ b/License-Service/docker-compose.yml
@@ -1,9 +1,16 @@
-version: '3'
+version: '3.7'
 
 services:
-  licensingservice:
-    image: ostock/licensing-service:0.0.1-SNAPSHOT
+  licenseservice:
+    image: ostock/license-service:0.0.1-SNAPSHOT
     ports:
       - "8080:8080"
     environment:
       - "SPRING_PROFILES_ACTIVE=dev"
+    networks:
+      backend:
+        - aliases:
+            - "lisenseservice"
+  networks:
+    backend:
+      driver: bridge
